Added action lists and rewrote javascript

--- a/lib/templates/base.html
+++ b/lib/templates/base.html
@@ -12,21 +12,7 @@
         <script type="text/javascript" src="{{ STATIC_URL}}js/jquery.js"></script>
         <script type="text/javascript" src="{{ STATIC_URL}}js/jquery.timeago.js"></script>
         <script type="text/javascript" src="{{ STATIC_URL}}js/bootstrap.js"></script>
+        <script type="text/javascript" src="{{ STATIC_URL}}js/underscore.js"></script>
         {% block pagejs %}{% endblock %}
-        <script type="text/javascript">
-            $(document).ready(function() {
-                $.timeago.settings.allowFuture = true;
-                $('time.timeago').timeago();
-                $('time[datetime]').each(function() {
-                    $(this).tooltip({
-                        animation: true,
-                        html: $(this).attr('datetime'),
-                        trigger: 'hover',
-                        placement: 'right'
-                        });
-                });
-            });
-        </script>
-        </script>
     </body>
 </html>
