--- a/todo/templates/todo/list_todo.html
+++ b/todo/templates/todo/list_todo.html
@@ -1,4 +1,4 @@
-{% extends "todo_base.html" %}
+{% extends "todo/base.html" %}
 
 {% block title %}List things to do{% endblock %}
 {% block header %}<h1>TODO <small>Things to do</small></h1>{% endblock %}
