--- a/todo/templates/todo/action_detail.stump.html
+++ b/todo/templates/todo/action_detail.stump.html
@@ -1,12 +1,17 @@
+<h3>{{ action.name }}</h3>
+<ul>
 {% for task in todo %}
-{% include "todo/task_details.html" %}
+<li>{% include "todo/task_details.list.html" %}</li>
 {% endfor %}
+</ul>
+{% if last %}
+{% with last as task %}
 <h5>Last finished tasks</h5>
-{% for action, task in last.items %}
 <article class="task-summary">
 <header>
 {{ task.name }} was completed <time class="timeago" datetime="{{ task.completed|date:"c" }}">{{ task.completed }}</time> by {% if task.completedby %}{{ task.completedby }}{% else %}{{ task.owner }}{% endif %}
 {% if task.repeater and task.repeater.days_to_next %} and will be assigned again in {{ task.repeater.days_to_next }} days.{% endif %}
 </header>
 </article>
-{% endfor %}
+{% endwith %}
+{% endif %}
