--- a/todo/templates/todo/area_detail.html
+++ b/todo/templates/todo/area_detail.html
@@ -1,4 +1,4 @@
-{% extends "todo_base.html" %}
+{% extends "todo/base.html" %}
 
 {% block title %}List things to do{% endblock %}
 {% block header %}<h1>{{ area.name }} <small>Area</small></h1>{% endblock %}
