--- a/todo/templates/todo/area_detail.stump.html
+++ b/todo/templates/todo/area_detail.stump.html
@@ -1,3 +1,5 @@
+{% load url from future %}
+<button class="btn add-task-btn" href="{% url "todo:add_to_area" area.slug %}">Add task</button>
 {% for task in todo %}
 {% include "todo/task_details.html" %}
 {% endfor %}
