--- a/todo/templates/todo/list_todo.html
+++ b/todo/templates/todo/list_todo.html
@@ -1,8 +1,12 @@
 {% extends "todo/base.html" %}
+{% load url from future %}
 
 {% block title %}List things to do{% endblock %}
 {% block header %}<h1>TODO <small>Things to do</small></h1>{% endblock %}
 {% block content %}
+            <div id="todo-btns">
+                <a class="add-task-btn btn" href="{% url 'todo:add_task' %}">Add task</a>
+            </div>
             <div id="todo-list">
                 {% for task in task_list %}{% include "todo/task_details.html" %}{% empty %}<h1>Nothing to do here!</h1>{% endfor %}
                 {% include "pagination.html" %}
