Added helper for getting cookies in JS

--- a/lib/templates/base.html
+++ b/lib/templates/base.html
@@ -13,6 +13,7 @@
         <script type="text/javascript" src="{{ STATIC_URL}}js/jquery.timeago.js"></script>
         <script type="text/javascript" src="{{ STATIC_URL}}js/bootstrap.js"></script>
         <script type="text/javascript" src="{{ STATIC_URL}}js/underscore.js"></script>
+        <script type="text/javascript" src="{{ STATIC_URL}}js/helpers.js"></script>
         {% block pagejs %}{% endblock %}
     </body>
 </html>
