Some major changes to unify some code
Also improved on adding new tasks.

--- a/todo/static/css/todo-style.css
+++ b/todo/static/css/todo-style.css
@@ -1,6 +1,9 @@
 #todo-list {
     padding-top: 1em;
 }
+.todo-list-task {
+    display: inline;
+}
 .todo-task {
     position: relative;
     opacity: 0.7;
