--- a/todo/templates/todo/list_actions.html
+++ b/todo/templates/todo/list_actions.html
@@ -8,8 +8,8 @@
                 {% for action in taskaction_list %}
                 {% if action.tasks.exists %}
                 <article>
-                <i class="{% if action.has_task %}icon-circle{% else %}icon-circle-blank{% endif %}"></i> <a class="url-folder" data-foldee="#fold-target-{{ action.slug }}" href="{% url 'todo:show_action' action.slug %}" id="show-{{ action.slug }}">{{ action.name }}</a>
-                <div class="drop-in" id="fold-target-{{ action.slug }}"></div>
+                <i class="{% if action.has_task %}icon-circle{% else %}icon-circle-blank{% endif %}"></i> <a class="url-folder" data-foldee="#fold-target-{{ action.slug }}" href="#show-{{ action.slug }}" id="show-{{ action.slug }}">{{ action.name }}</a>
+                <div data-url="{% url 'todo:show_action' action.slug %}" class="drop-in fold-target" id="fold-target-{{ action.slug }}"></div>
                 </article>
                 {% endif %}
                 {% empty %}<h1>Nothing to do here!</h1>{% endfor %}
