--- a/todo/templates/todo/task_details.html
+++ b/todo/templates/todo/task_details.html
@@ -3,7 +3,9 @@
     <header>
         <span class="task-title">{{ task.name }}</span>
         {% if not task.completed %}
+        {% if task.deadline %}
         <span class="task-deadline">Deadline <time class="timeago" datetime="{{ task.deadline|date:"c" }}">{{ task.deadline }}</time></span>
+        {% endif %}
         {% else %}
         <span class="task-completed">Completed <time class="timeago" datetime="{{ task.completed|date:"c" }}">{{ task.completed }}</time>
         {% if task.completedby and task.completedby != task.owner %}
@@ -12,7 +14,7 @@
         </span>
         {% endif %}
         {% if task.assigned and not task.assigned == task.owner %}
-        <span class="task-assigned">Assigned to <a href="{% url "todo:show_user" task.assigned %}">{{ task.assigned.username }}</a></span>
+        <span class="task-assigned">Assigned to <a href="{% url "todo:show_user" task.assigned %}">{{ task.assigned.username }}</a>{% if not task.owner == user %} owned by <a href="{% url "todo:show_user" task.assigned %}">{{ task.owner.username }}</a>{% endif %}</span>
         {% else %}
         {% if task.owner %}
         <span class="task-assigned">Owned by <a href="{% url "todo:show_user" task.owner %}">{{ task.owner.username }}</a></span>
