--- a/todo/templates/todo/task_details.list.html
+++ b/todo/templates/todo/task_details.list.html
@@ -1,10 +1,10 @@
 {% load url from future %}{% load helpers %}{% spaceless %}
-<article id="task-{{ task.id }}" class="todo-list-task">
-<a class="foldout-toggle{% if not task.completed and task.days_left < 0 %} text-error{% endif %}" data-foldee="#foldout-{{ task.id }}" href="#">{{ task.object }} <small class="extra-small">[{{ task.assigned.first_name }}]</small></a>
+<article id="task-{{ task.id }}" data-id="{{ task.id }}" class="task todo-list-task">
+<a class="foldout-toggle{% if task.deadline and not task.completed and task.days_left < 0 %} text-error{% endif %}{% if not task.deadline %} text-success{% endif %}" data-foldee="#foldout-{{ task.id }}" href="#">{{ task.object }} <small class="extra-small">[{{ task.assigned.first_name }}]</small></a>
 <div id="foldout-{{ task.id }}" class="hide">
     <div>Assigned to <a href="{% url "todo:show_user" task.assigned %}">{{ task.assigned }}</a></div>
     {% if task.deadline and not task.completed %}
-    <div>Should be completed by <time class="timeago" datetime="{{ task.deadline|date:"c" }}">{{ task.deadline }}</time></div>
+    <div>Should be completed <time class="timeago" datetime="{{ task.deadline|date:"c" }}">{{ task.deadline }}</time></div>
     {% endif %}
 </div>
 
