--- a/todo/templates/todo/user_detail.html
+++ b/todo/templates/todo/user_detail.html
@@ -1,13 +1,17 @@
 {% extends "todo/base.html" %}
 {% load url from future %}
 
-{% block title %}{{ user.first_name }} {{ user.last_name }}{% endblock %}
-{% block header %}<h1>{{ user.first_name }} {{ user.last_name }} <small>User</small></h1>{% endblock %}
+{% block title %}{{ show_user.first_name }} {{ show_user.last_name }}{% endblock %}
+{% block header %}<h1>{{ show_user.first_name }} {{ show_user.last_name }} <small>User</small></h1>{% endblock %}
 {% block content %}
+<a class="btn add-task-btn" href="{% url 'todo:add_to_user' show_user.username %}">Add task</a>
 <h2>Areas</h2>
 <div id="areas-list">
     {% for area in areas %}
-    <div><i class="{% if area.has_task %}icon-circle{% else %}icon-circle-blank{% endif %}"></i> <a href="{% url "todo:show_area" area.slug %}">{{ area }}</a></div>
+    <div>
+        <i class="{% if area.has_task %}icon-circle{% else %}icon-circle-blank{% endif %}"></i> <a class="url-folder" data-foldee="#fold-target-{{ area.slug }}" href="{% url 'todo:show_area' slug=area.slug %}" id="show-{{ area.slug }}">{{ area.name }}</a>
+        <div class="drop-in" id="fold-target-{{ area.slug }}">
+    </div>
     {% endfor %}
 </div>
 
