Added general ajax reload behaviour

--- a/todo/templates/todo/list_todo.html
+++ b/todo/templates/todo/list_todo.html
@@ -4,11 +4,8 @@
 {% block title %}List things to do{% endblock %}
 {% block header %}<h1>TODO <small>Things to do</small></h1>{% endblock %}
 {% block content %}
-            <div id="todo-btns">
-                <a class="add-task-btn btn" href="{% url 'todo:add_task' %}">Add task</a>
-            </div>
-            <div id="todo-list">
-                {% for task in task_list %}{% include "todo/task_details.html" %}{% empty %}<h1>Nothing to do here!</h1>{% endfor %}
+            <div id="todo-list" class="reload-target" data-url="{{ request.get_full_path }}">
+                {% include "todo/list_todo.stump.html" %}
                 {% include "pagination.html" %}
             </div>
 {% endblock %}
